@@ -1,11 +1,11 @@
 /*
- *    Copyright 2016-2021 the original author or authors.
+ *    Copyright 2016-2025 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
  *    You may obtain a copy of the License at
  *
- *       http://www.apache.org/licenses/LICENSE-2.0
+ *       https://www.apache.org/licenses/LICENSE-2.0
  *
  *    Unless required by applicable law or agreed to in writing, software
  *    distributed under the License is distributed on an "AS IS" BASIS,
@@ -17,7 +17,6 @@ package org.mybatis.dynamic.sql;
 
 import java.util.Collection;
 import java.util.Objects;
-import java.util.function.BiFunction;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
@@ -26,29 +25,18 @@ import java.util.stream.Stream;
 
 public abstract class AbstractListValueCondition<T> implements VisitableCondition<T> {
     protected final Collection<T> values;
-    protected final Callback emptyCallback;
 
     protected AbstractListValueCondition(Collection<T> values) {
-        this(values, () -> { });
-    }
-
-    protected AbstractListValueCondition(Collection<T> values, Callback emptyCallback) {
         this.values = Objects.requireNonNull(values);
-        this.emptyCallback = Objects.requireNonNull(emptyCallback);
     }
 
-    public final <R> Stream<R> mapValues(Function<T, R> mapper) {
-        return values.stream().map(mapper);
-    }
-
-    @Override
-    public boolean shouldRender() {
-        return !values.isEmpty();
+    public final Stream<T> values() {
+        return values.stream();
     }
 
     @Override
-    public void renderingSkipped() {
-        emptyCallback.call();
+    public boolean isEmpty() {
+        return values.isEmpty();
     }
 
     @Override
@@ -63,40 +51,37 @@ public abstract class AbstractListValueCondition<T> implements VisitableConditio
 
     private Collection<T> applyFilter(Predicate<? super T> predicate) {
         Objects.requireNonNull(predicate);
-        return values.stream().filter(predicate).collect(Collectors.toList());
+        return values.stream().filter(predicate).toList();
     }
 
     protected <S extends AbstractListValueCondition<T>> S filterSupport(Predicate<? super T> predicate,
-            BiFunction<Collection<T>, Callback, S> constructor, S self, Supplier<S> emptySupplier) {
-        if (shouldRender()) {
-            Collection<T> filtered = applyFilter(predicate);
-            return filtered.isEmpty() ? emptySupplier.get() : constructor.apply(filtered, emptyCallback);
-        } else {
+            Function<Collection<T>, S> constructor, S self, Supplier<S> emptySupplier) {
+        if (isEmpty()) {
             return self;
+        } else {
+            Collection<T> filtered = applyFilter(predicate);
+            return filtered.isEmpty() ? emptySupplier.get() : constructor.apply(filtered);
         }
     }
 
     protected <R, S extends AbstractListValueCondition<R>> S mapSupport(Function<? super T, ? extends R> mapper,
-            BiFunction<Collection<R>, Callback, S> constructor, Supplier<S> emptySupplier) {
-        if (shouldRender()) {
-            return constructor.apply(applyMapper(mapper), emptyCallback);
-        } else {
+            Function<Collection<R>, S> constructor, Supplier<S> emptySupplier) {
+        if (isEmpty()) {
             return emptySupplier.get();
+        } else {
+            return constructor.apply(applyMapper(mapper));
         }
     }
 
     /**
-     * If renderable, apply the predicate to each value in the list and return a new condition with the filtered values.
-     *     Else returns a condition that will not render (this). If all values are filtered out of the value
-     *     list, then the condition will not render.
+     * If not empty, apply the predicate to each value in the list and return a new condition with the filtered values.
+     *     Else returns an empty condition (this).
      *
-     * @param predicate predicate applied to the values, if renderable
-     * @return a new condition with filtered values if renderable, otherwise a condition
-     *     that will not render.
+     * @param predicate predicate applied to the values, if not empty
+     *
+     * @return a new condition with filtered values if renderable, otherwise an empty condition
      */
     public abstract AbstractListValueCondition<T> filter(Predicate<? super T> predicate);
 
-    public abstract AbstractListValueCondition<T> withListEmptyCallback(Callback callback);
-
-    public abstract String renderCondition(String columnName, Stream<String> placeholders);
+    public abstract String operator();
 }
